<resources>
    <string name="app_name">Lab7</string>
    <string name="hello_world">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_text">Login</string>

    <string name="password_text">Password</string>
    <string name="what">What does it do?</string>
    <string name="checkBox">Check Box</string>
    <string name="radio_button">Radio Button</string>
    <string name="dialog_message">Finishing activity</string>
    <string name="dialog_title">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="login">Login</string>
    <string name="chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="weather_button">Check weather</string>
    <string name="weather">Check weather</string>
    <string name="current">Current:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="ottawa_weather">Ottawa Weather</string>
    <string name="delete_this_message">Delete this Message</string>
    <string name="id">ID=</string>
    <string name="message_here">MessageHere</string>
</resources>

