<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_here"
        android:textSize="18sp"
        android:gravity="right"/>

    <TextView
        android:id="@+id/tv_IDnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_message"
        android:layout_marginTop="34dp"
        android:text="@string/id"
        android:textSize="18sp" />

    <Button
        android:id="@+id/delete_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/delete_this_message"
        android:textColorLink="@android:color/holo_blue_light" />
</RelativeLayout>
