<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:rowCount="2"
    android:columnCount="2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.androidlabs.ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button"
        android:layout_column="0"
        android:layout_row="0"

        android:layout_columnWeight="1"

        />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        />

    <Switch
        android:id="@+id/switch_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>
